--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,14 @@
 {
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "jsx": "react-jsx" // هذا مهم لمشاريع React التي تستخدم JSX
-  },
-  "include": ["src/**/*"] // تأكد من تضمين جميع ملفاتك المصدرية
+    }
+  }
 }
