--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.2",
     "html2canvas": "^1.4.1",
