--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.2",
     "html2canvas": "^1.4.1",
@@ -64,6 +65,7 @@
     "tailwindcss-rtl": "^0.9.0",
     "universal-cookie": "^8.0.1",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1",
     "zod": "^3.25.28"
   },
